clusters/talos-cluster/open-webui/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui-route
  namespace: open-webui
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "chat.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: open-webui
          port: 8080
